syntax = "proto3";

option csharp_namespace = "DatabaseApp.AppCommunication.Grpc";

message GetAvailableClassesRequest {
  int64 telegramId = 1;
}

message GetAvailableClassesReply {
  repeated ClassInformation classInformation = 1;
  bool isFailed = 2;
  string errorMessage = 3;
}
message ClassInformation {
  string className = 1;
  int64 classDateUnixTimestamp = 2;
}

message EnqueueInClassRequest {
  int64 telegramId = 1;
  string className = 2;
  int64 classDateUnixTimestamp = 3;
}
message EnqueueInClassReply {
  repeated string studentsQueue = 1;
  bool wasAlreadyEnqueued = 2;
  bool isFailed = 3;
  string errorMessage = 4;
}

message DequeueFromClassRequest {
  int64 telegramId = 1;
  string className = 2;
  int64 classDateUnixTimestamp = 3;
}
message DequeueFromClassReply {
  repeated string studentsQueue = 1;
  bool wasAlreadyDequeuedFromClass = 2;
  bool isFailed = 3;
  string errorMessage = 4;
}

message ViewQueueClassRequest {
  string className = 1;
  int64 classDateUnixTimestamp = 2;
}
message ViewQueueClassReply {
  repeated string studentsQueue = 1;
  bool isFailed = 2;
  string errorMessage = 3;
}

message SetAvailableClassesRequest {
  string groupName = 1;
  map<string, int64> classes = 2;
}